--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -39,6 +40,9 @@ dependencies {
 
     // CircleImage
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    // Login button
+    implementation 'com.shaishavgandhi:login-buttons:1.0.0'
 
     // Tests
     testImplementation 'junit:junit:4.12'
