Firebase configuration done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ dependencies {
 
     // ButterKnife
     implementation 'com.jakewharton:butterknife:10.1.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     // CircleImage
@@ -44,8 +43,16 @@ dependencies {
     // Login button
     implementation 'com.shaishavgandhi:login-buttons:1.0.0'
 
+    // Firebase
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    // Google Maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
     // Tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
