--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,11 @@ dependencies {
     implementation 'com.shaishavgandhi:login-buttons:1.0.0'
 
     // Firebase
+    implementation 'com.google.firebase:firebase-firestore:21.1.1'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
-    // Google Maps
+    // Google Services
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.0.0'
