Show workmates details

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     // CircleImage
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     // Login button
     implementation 'com.shaishavgandhi:login-buttons:1.0.0'
 
