--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,11 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".CreateAccountActivity"
+            android:label="@string/title_new_account"/>
+        <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_settings"/>
+            android:label="@string/title_settings" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -71,7 +74,6 @@
         <receiver
             android:name=".broadcast.AppNotificationReceiver"
             android:exported="false" />
-
         <receiver
             android:name=".broadcast.RebootReceiver"
             android:exported="false">
